# podofo

./: .editorconfig  .gitignore  .svnignore  AGENTS.md  API-MIGRATION.md  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODING-STYLE.md  CODINGSTYLE.txt  CONTRIBUTIONS.txt  COPYING  COPYING.exception  ChangeLog  Doxyfile  Doxyfile.in  FAQ.html  INSTALL  Makefile.am  Makefile.in  Makefile.svn  NOTICE  PoDoFoLib.vcproj  PoDoFoVersion.cmake  README  README.html  README.md  SECURITY.md  SOURCE-LAYOUT.md  TODO  TODO.md  a.patch  conanfile.py  conanfile.txt  configure  configure.in  podofo.sln  podofo_config.h.in  vcpkg.cmake  (+1 more)
examples/helloworld/: CMakeLists.txt  helloworld.cpp
examples/pdfcontentsgraph/: CMakeLists.txt  PdfContentsGraph.cpp  PdfContentsGraph.h  README.txt  main.cpp
examples/portfolio/: CMakeLists.txt  create_portfolio.cpp  read_portfolio.cpp
src/: CMakeLists.txt  Makefile.am  Makefile.in  Pdf3rdPtyForwardDecl.h  PdfAcroForm.cpp  PdfAcroForm.h  PdfAction.cpp  PdfAction.h  PdfAlgorithm.cpp  PdfAlgorithm.h  PdfAnnotation.cpp  PdfAnnotation.h  PdfArray.cpp  PdfArray.h  PdfCanvas.cpp  PdfCanvas.h  PdfColor.cpp  PdfColor.h  PdfCompilerCompat.cpp  PdfCompilerCompat.h  PdfCompilerCompatPrivate.h  PdfContents.cpp  PdfContents.h  PdfContentsGraph.cpp  PdfContentsGraph.h  PdfContentsTokenizer.cpp  PdfContentsTokenizer.h  PdfData.cpp  PdfData.h  PdfDataType.cpp  PdfDataType.h  PdfDate.cpp  PdfDate.h  PdfDefines.h  PdfDefinesPrivate.h  PdfDestination.cpp  PdfDestination.h  PdfDictionary.cpp  PdfDictionary.h  PdfDifferenceEncoding.cpp  (+150 more)
src/PKIBox/: CMakeLists.txt  Exception.cpp  Exception.h  InvalidArgumentException.cpp  InvalidArgumentException.h  NullPointerException.cpp  NullPointerException.h  PKIBox.cpp  PKIBox.h
src/base/: CMakeLists.txt  Pdf3rdPtyForwardDecl.h  PdfArray.cpp  PdfArray.h  PdfCanvas.cpp  PdfCanvas.h  PdfColor.cpp  PdfColor.h  PdfCompilerCompat.h  PdfCompilerCompatPrivate.h  PdfContentsTokenizer.cpp  PdfContentsTokenizer.h  PdfData.cpp  PdfData.h  PdfDataType.cpp  PdfDataType.h  PdfDate.cpp  PdfDate.h  PdfDefines.h  PdfDictionary.cpp  PdfDictionary.h  PdfEncoding.cpp  PdfEncoding.h  PdfEncodingFactory.cpp  PdfEncodingFactory.h  PdfEncrypt.cpp  PdfEncrypt.h  PdfError.cpp  PdfError.h  PdfExtension.h  PdfFileStream.cpp  PdfFileStream.h  PdfFilter.cpp  PdfFilter.h  PdfFiltersPrivate.cpp  PdfFiltersPrivate.h  PdfImmediateWriter.cpp  PdfImmediateWriter.h  PdfInputDevice.cpp  PdfInputDevice.h  (+55 more)
src/doc/: CMakeLists.txt  PdfAcroForm.cpp  PdfAcroForm.h  PdfAction.cpp  PdfAction.h  PdfAnnotation.cpp  PdfAnnotation.h  PdfCMapEncoding.cpp  PdfCMapEncoding.h  PdfContents.cpp  PdfContents.h  PdfDestination.cpp  PdfDestination.h  PdfDifferenceEncoding.cpp  PdfDifferenceEncoding.h  PdfDocument.cpp  PdfDocument.h  PdfElement.cpp  PdfElement.h  PdfEncodingObjectFactory.cpp  PdfEncodingObjectFactory.h  PdfExtGState.cpp  PdfExtGState.h  PdfField.cpp  PdfField.h  PdfFileSpec.cpp  PdfFileSpec.h  PdfFont.cpp  PdfFont.h  PdfFontCID.cpp  PdfFontCID.h  PdfFontCache.cpp  PdfFontCache.h  PdfFontConfigWrapper.cpp  PdfFontConfigWrapper.h  PdfFontFactory.cpp  PdfFontFactory.h  PdfFontFactoryBase14Data.h  PdfFontMetrics.cpp  PdfFontMetrics.h  (+67 more)
src/podofo/: CMakeLists.txt  Config.cmake.in  libpodofo.pc.in  podofo-base.h  podofo-config.cmake.in  podofo-contrib.h  podofo-main.h  podofo-staging.h  podofo.h  podofo.rc
src/util/: PdfMutex.cpp  PdfMutex.h  PdfMutexImpl_noop.h  PdfMutexImpl_pthread.h  PdfMutexImpl_win32.h  PdfMutexWrapper.cpp  PdfMutexWrapper.h
test/: CMakeLists.txt  COPYING  Makefile.am  Makefile.in  PdfError_Test.cpp  PdfString_Test.cpp  PdfTest.h  README.md  valgrind.suppressions
test/AlgorithmTest/: AlgorithmTest.cpp  Makefile.am  Makefile.in
test/ContentParser/: CMakeLists.txt  ContentParser.cpp  ContentParser.h  main.cpp
test/CreationTest/: CMakeLists.txt  CreationTest.cpp  Makefile.am  Makefile.in
test/DeviceTest/: CMakeLists.txt  DeviceTest.cpp
test/FilterTest/: CMakeLists.txt  FilterTest.cpp  Makefile.am
test/FormTest/: FormTest.cpp
test/LargeTest/: CMakeLists.txt  LargeTest.cpp  Makefile.am
test/ObjectParserTest/: CMakeLists.txt  Makefile.am  Makefile.in  ObjectParserTest.cpp
test/ParserTest/: CMakeLists.txt  Makefile.am  Makefile.in  ParserTest.cpp
test/SignTest/: SignTest.cpp
test/SignatureTest/: CMakeLists.txt  NSSSignatureGenerator.cpp  NSSSignatureGenerator.h  SignTest.cpp  SimpleSignatureGenerator.h
test/TokenizerTest/: CMakeLists.txt  Makefile.am  TokenizerTest.cpp
test/VariantTest/: CMakeLists.txt  Makefile.am  Makefile.in  VariantTest.cpp
test/WatermarkTest/: CMakeLists.txt  Makefile.am  Makefile.in  WatermarkTest.cpp  WatermarkTest.vcproj
test/common/: CMakeLists.txt  PdfTest.cpp  PdfTest.h
test/pdfs/: README.txt  inline-image.txt
test/system/: podofo-system.sh
test/unit/: AppendTest.cpp  BasicTest.cpp  BasicTypeTest.cpp  BasicTypeTest.h  BoundsCheckTest.cpp  CMakeLists.txt  CMapTest.cpp  CollectionTest.cpp  ColorTest.cpp  ColorTest.h  ContentStreamReaderTest.cpp  CorruptedTest.cpp  DateTest.cpp  DateTest.h  DeviceTest.cpp  DeviceTest.h  ElementTest.cpp  ElementTest.h  EncodingTest.cpp  EncodingTest.h  EncryptTest.cpp  EncryptTest.h  FastExtractorTest.cpp  FilterTest.cpp  FilterTest.h  FontTest.cpp  FontTest.h  ImageTest.cpp  NameTest.cpp  NameTest.h  PageTest.cpp  PageTest.h  PageTreeTest.cpp  PagesTreeTest.cpp  PagesTreeTest.h  PainterTest.cpp  PainterTest.h  ParserTest.cpp  ParserTest.h  PatternTest.cpp  (+16 more)
tools/podofobox/: CMakeLists.txt  boxsetter.cpp  boxsetter.h  podofobox.cpp
tools/podofocolor/: CMakeLists.txt  colorchanger.cpp  colorchanger.h  colorspace.cpp  colorspace.h  dummyconverter.cpp  dummyconverter.h  example.lua  graphicsstack.cpp  graphicsstack.h  grayscaleconverter.cpp  grayscaleconverter.h  iconverter.cpp  iconverter.h  lua_compat.h  luaconverter.cpp  luaconverter.h  podofocolor.cpp
tools/podofocountpages/: CMakeLists.txt  countpages.cpp
tools/podofoimg2pdf/: CMakeLists.txt  ImageConverter.cpp  ImageConverter.h  podofoimg2pdf.cpp
tools/podofoimgextract/: CMakeLists.txt  ImageExtractor.cpp  (+5 more)
(+954 files in other folders)
